// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox generates a label if a child prop of text is supplied 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <test-file-stub
      data-radium={true}
      style={
        Object {
          "fill": "#43B02A",
          "height": 22,
          "width": 22,
        }
      }
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      disabled={undefined}
      id={1}
      onChange={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundImage": "none",
          "height": 22,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "lineHeight": "22px",
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox incorporates user style if passed 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "pink",
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "border": "2px solid purple",
        "position": "relative",
      }
    }
  >
    <test-file-stub
      data-radium={true}
      style={
        Object {
          "fill": "#43B02A",
          "height": 22,
          "width": 22,
        }
      }
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      disabled={undefined}
      id={1}
      onChange={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundImage": "none",
          "height": 22,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "color": "green",
        "lineHeight": "22px",
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox incorporates user style if passed 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <test-file-stub
      data-radium={true}
      style={
        Object {
          "fill": "#43B02A",
          "height": 22,
          "width": 22,
        }
      }
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      disabled={undefined}
      id={2}
      onChange={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "backgroundImage": "none",
          "height": 22,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={2}
    style={
      Object {
        "lineHeight": "22px",
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox renders the correct button type 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <test-file-stub
    data-radium={true}
    style={
      Object {
        "fill": "#43B02A",
        "height": 22,
        "width": 22,
      }
    }
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    disabled={undefined}
    id={1}
    onChange={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundImage": "none",
        "height": 22,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;

exports[`Checkbox renders the correct selected state 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <test-file-stub
    data-radium={true}
    style={
      Object {
        "fill": "#43B02A",
        "height": 22,
        "width": 22,
      }
    }
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    disabled={undefined}
    id={1}
    onChange={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundImage": "none",
        "height": 22,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;

exports[`Checkbox renders the correct selected state 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <test-file-stub
    data-radium={true}
    style={
      Object {
        "fill": "#43B02A",
        "height": 22,
        "width": 22,
      }
    }
  />
  <input
    aria-label={undefined}
    checked={true}
    data-radium={true}
    disabled={undefined}
    id={2}
    onChange={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundImage": "none",
        "height": 22,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;

exports[`Checkbox renders the correct selected state 3`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <test-file-stub
    data-radium={true}
    style={
      Object {
        "fill": "#BDBDBD",
        "height": 22,
        "width": 22,
      }
    }
  />
  <input
    aria-label={undefined}
    checked={true}
    data-radium={true}
    disabled={true}
    id={2}
    onChange={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundImage": "none",
        "height": 22,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;
